# pulsar-project

./: ._client.py  .gitignore  README.md  app.py  client.py  configs-example-1.json  configs-example-2.json  configs-example-3.json  configs.json  manager.py  mcp_servers_index.json  memory.py  provider.py  provider_and_models.md  pyproject.toml  task.py  utils.py
data/task/: task-20250728_120057_180312_253.json  task-20250728_130120_883220_285.json  task-20250728_131121_742124_125.json  task-20250728_133355_787172_848.json  task-20250728_134122_908351_467.json  task-20250728_134256_211103_706.json
logs/: log-20250726_193256_663764.json  log-20250726_193638_201437.json  log-20250726_193811_087019.json  log-20250726_194031_110659.json  log-20250726_194137_387764.json  log-20250726_194416_145342.json  log-20250726_194703_286769.json  log-20250726_194801_600541.json  log-20250726_194923_927935.json  log-20250726_194952_488766.json  log-20250726_195736_521467.json  log-20250726_200232_540074.json  log-20250726_203058_383280.json  log-20250726_203751_819516.json  log-20250726_204111_991791.json  log-20250726_204726_571057.json  log-20250726_205102_725888.json
mcp_servers/geocoding/: geocoding.py
mcp_servers/geodata/: geodata.py
static/: app.jsx  styles.css
templates/: index.html
tests/: test_simple_rag.py
