[project]
name = "pulsar-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "anthropic>=0.59.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "json5>=0.12.0",
    "mcp>=1.12.1",
]
